# littletable

./: .travis.yml  CHANGES  Fixed Width data demo.ipynb  HowToUseLittletable.md  HowToUseLittletable.txt  LICENSE  Littletable PPL demo.ipynb  MANIFEST.in  README  README.md  fixed_width_demo.py  how_to_use_littletable.md  littletable.py  littletable_demo.py  makeRelease.bat  pivot_demo.py  pyproject.toml  requirements.dev  setup.py  tox.ini  unit_tests.py  update_littletable_timestamp.py
docs/: accessor_pattern_diagrams.md
examples/: Fixed Width data demo.ipynb  Littletable PPL demo.ipynb  PEPs data demo.ipynb  area_codes.py  csv_import_examples.py  dune_casts.py  excel_data_types.py  explore_unicode.py  fixed_width_demo.py  food_data.py  full_text_search.py  groupby_example.py  littletable_demo.py  nfkc_normalization.py  peps.py  pivot_demo.py  present_groupby_example.py  sliced_indexing.py  star_trek_tos.py  star_trek_tos_eps.csv  table_to_dataframe.py  time_conversions.py  time_zone_db.py  us_ppl.csv  zen_of_python_pep20.py
examples/food_data_set/: FOOD-DATA-GROUP1.csv  FOOD-DATA-GROUP2.csv  FOOD-DATA-GROUP3.csv  FOOD-DATA-GROUP4.csv  FOOD-DATA-GROUP5.csv  README.md  combined_food_data.csv  food_data_merge.py
examples/pyscript/: matplotlib.html
test/: abc.csv  abc.csv.xz  abc.tsv  abc.xlsx  csv_import_http_server.py  data_types.xlsx  star_trek_tos_eps.jsonl
trunk/: CHANGES  HowToUseLittletable.txt  MANIFEST.in  littletable.py  littletable_demo.py  makeRelease.bat  pivot_demo.py  setup.py
