[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "littletable"
version = "3.0.2"
description = "Python in-memory ORM database"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Paul McGuire", email = "ptmcg@austin.rr.com" }
]
maintainers = [
  { name = "Paul McGuire", email = "ptmcg@austin.rr.com" }
]
urls = {Homepage = "https://github.com/ptmcg/littletable/", Download = "https://pypi.org/project/littletable/"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database"
]

[tool.setuptools]
py-modules = ["littletable"]
